Fix flicker on card hover

--- a/less/gameboard/right-pane.less
+++ b/less/gameboard/right-pane.less
@@ -15,6 +15,7 @@
         position: relative;
         top: auto;
         right: auto;
+        overflow: hidden;
     }
 }
 
